HelloUltraviolet/Fixtures/RejectedSource/Keys/DynamicKeyStaticRequired/Expected.uv
//! Expected diagnostic metadata for the DynamicKeyStaticRequired rejected-source specimen.

expectedDiagnostic("E-CON-0020", "rule.19.K-Static-Required")
